# Molebie_AI

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  full_system_architecture_map_730d3d3f.plan.md  install.ps1  install.sh  pyproject.toml  setup.sh  social-posts-airplane.md
.claude/: BRANCH-MANAGER.md  CI-WATCHER.md  REVIEW-LOOP.md
.claude/agents/: branch-auditor.md  ci-diagnoser.md  reviewer-project-goal.md  reviewer-senior-engineer.md  reviewer-task-goal.md
.claude/commands/: best-way.md  branch-manager.md  ci-watch.md  open-source-check.md  review.md
.claude/hooks/: branch-manager-sweep.sh  post-merge-branch-hook.sh  post-push-hook.sh  review-stop-hook.sh  session-start-sweep.sh
.github/: dependabot.yml
.github/workflows/: ci-failure-notify.yml  ci.yml  codeql.yml  release.yml  secret-scan.yml  test-installer.yml
cli/: __init__.py  main.py
cli/commands/: config_cmd.py  doctor.py  extend.py  feature.py  install.py  join.py  model_cmd.py  monitor.py  run.py  status.py
cli/models/: config.py
cli/services/: backend_setup.py  config_manager.py  deep_checker.py  env_generator.py  feature_setup.py  network_info.py  prerequisite_checker.py  service_manager.py  supabase_manager.py  system_info.py
cli/tests/: test_animation.py  test_config_migration.py  test_deep_checker.py  test_extend_commands.py  test_extend_invite_command.py  test_extend_remove_command.py  test_in_flight_panel.py  test_install_capability.py  (+5 more)
docs/: api.md  architecture.md  configuration.md  contributing.md  troubleshooting.md
gateway/: .env.example  .gitignore  pyproject.toml  requirements-ml.txt  requirements.txt
gateway/app/: Local_AI_Project.code-workspace  config.py  main.py  schema.py
gateway/app/middleware/: auth.py  observability.py  tailscale_identity.py
gateway/app/models/: chat.py  documents.py  folder_ingest.py
gateway/app/routes/: auth.py  chat.py  documents.py  fleet.py  folder_ingest.py  health.py  metrics.py  vault.py
gateway/app/services/: audit.py  auth_service.py  backend_probe.py  consistency.py  context_generator.py  database.py  document_processor.py  embedding.py  inference.py  inference_pool.py  ingest_worker.py  intent.py  judge.py  markdown_meta.py  memory.py  metrics_registry.py  rag.py  rag_eval.py  reranker.py  selfcheck.py  speaker.py  sse_split.py  storage.py  storage_drainer.py  storage_mover.py  storage_probe.py  storage_reconciler.py  storage_scheduler.py  storage_uri.py  streaming_think_filter.py  summarizer.py  system_probe.py  tailscale_outbound.py  tailscale_serve.py  tools.py  transcription.py  vault_auto_sync.py  vault_sync.py  verification.py  web_search.py
gateway/configs/: README.md  llamacpp-9b.sh  ollama-modelfile-4b  ollama-modelfile-9b  vllm-9b.sh
gateway/prompts/: cove_decompose.txt  cove_verify.txt  system.txt  system_generative.txt  system_rag.txt  system_rag_explain.txt  system_voice.txt
gateway/scripts/: migrate_embedding_dim.py
gateway/tests/: README.md  conftest.py  test_audit_schema.py  test_audit_service.py  test_backend_probe.py  test_brains.py  test_brains_v2.py  test_chat.sh  test_chat_full.py  test_collection_guard.py  test_compute_pool_population.py  test_confidence_routing.py  test_cors_regex.py  test_drainer_force_remove.py  test_extra_payload.py  test_fleet_audit_route.py  test_fleet_drain_route.py  test_fleet_inventory_route.py  test_fleet_migrate_route.py  test_fleet_reconcile_route.py  test_fleet_register_route.py  test_fleet_remove_route.py  test_fleet_satellites_schema.py  test_format_context_grouping.py  test_fts_stopwords.py  test_identity_query.py  test_inference.py  test_inference_cross_tier_fallback.py  test_inference_pool.py  test_inference_stream_strip.py  test_lifespan_serve_bootstrap.py  test_local_storage_uri_tolerance.py  test_probe_drives_selector.py  test_quantiles.py  test_rag_metrics_persistence.py  test_rag_retrieval_core.py  test_rag_vector_threshold.py  test_satellite_blobs_schema.py  test_sessions.py  test_storage_drainer.py  (+18 more)
gateway/tests/eval/: README.md  ablation.sh  calibrate_thresholds.py  golden_set.jsonl  promptfoo.yaml  run_baseline.py  run_eval.sh  run_pass_rate_eval.py  run_rag_only.py  seed_corpus.py  test_runner.py
gateway/tests/eval/corpus/: cove-verifier.md  prompt-and-citations.md  rag-config.md  sampling-and-budgets.md  selfcheck-and-judge.md
gateway/tests/eval/eval-results/: all.json  baseline.json  cove.json  gateway.log.all  gateway.log.baseline  gateway.log.cove  gateway.log.judge  gateway.log.seed  judge.json  summary.txt
gateway/tests/fixtures/: compute_capabilities_v1.json
gateway/training/: README.md  build_dataset.py  eval_lora.py  hyperparams.yaml  label.py  probe.py  probe_set.jsonl  train_mlx.sh  train_unsloth.sh
gateway/training/tests/: test_build_dataset.py  test_eval_lora.py  test_label.py
satellite_storage/: README.md  __init__.py  __main__.py  app.py  config.py  pyproject.toml
satellite_storage/cli/: __init__.py  _service_base.py  install.py  join.py  main.py  network.py  serve.py  service.py  service_linux.py  service_macos.py  service_windows.py  ui.py  uninstall.py
satellite_storage/middleware/: tailscale_identity.py
satellite_storage/routes/: capacity.py  health.py  manifest.py  storage.py
satellite_storage/services/: cas.py
satellite_storage/templates/: com.molebieai.satellite.plist  molebie-satellite-task.xml  molebie-satellite.service
satellite_storage/tests/: conftest.py  test_capacity_health.py  test_cas.py  test_manifest_route.py  test_storage_routes.py  test_tailscale_identity.py
satellite_storage/tests/cli/: test_install_wizard.py  test_join.py  test_network.py  test_service_dispatcher.py  test_service_linux.py  test_service_macos.py  test_service_windows.py  test_uninstall.py
scripts/: auto-pull.sh  com.jimmy.localai.autopull.plist  com.molebieai.autopull.plist  mlx_server.py
searxng/: settings.yml
supabase/: config.toml
tasks/: lessons.md  todo.md
webapp/: package-lock.json  package.json
(+66 files in other folders)
