[project]
name = "molebie-ai"
version = "0.1.0"
description = "CLI for managing Molebie AI services"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=14.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
molebie-ai = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
